[FIX]<pro>Table:Fix the problem that the cell contents is not aligned.

--- a/components-pro/table/style/index.less
+++ b/components-pro/table/style/index.less
@@ -100,11 +100,15 @@
   }
 
   &:not(&-aggregation) &-tbody &-cell-inner {
-    .@{table-prefix-cls}-cell-command,
-    .@{c7n-prefix}-tag {
+    .@{c7n-pro-prefix}-btn {
+      height: initial;
+      line-height: initial;
       vertical-align: 0.125em;
     }
-
+    
+    img {
+      vertical-align: 0.125em;
+    }
 
     .@{c7n-pro-prefix}-btn-icon-only {
       vertical-align: baseline;
